fixed up some features and cleaned up files that no longer in use

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
-    <link rel="icon" href="assets/images/bossbabylookdownleft.png">
+    <link rel="icon" href="assets/images/bossbabypointdown.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
     <body>
@@ -84,7 +85,9 @@
                 <source src="./assets/audio/babyLaugh.mp3" type="audio/mp3">
                 </audio>
             <!--boss baby-->
-            
+            <audio id="bossbaby">
+            <source src="./assets/audio/cookiesforclosers.mp3" type="audio/mp3">
+                </audio>
             <!--wrong guess-->
             <audio id="uhOhBaby">
                 <source src="./assets/audio/uhOhBaby.mp3" type="audio/mp3">
