--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
             <audio id="babycry">
                 <source src="./assets/audio/babyCrying.mp3" type="audio/mp3">
             </audio>
+             <audio id="dinosaurs">
+                <source src="./assets/audio/dinosaurs.mp3" type="audio/mp3">
+            </audio>  
         </div>
 
 
